fix alignment

--- a/wedding/src/pages/evergreen.module.scss
+++ b/wedding/src/pages/evergreen.module.scss
@@ -29,6 +29,7 @@
       .categoryName {
         display: flex;
         align-items: center;
+        text-align: left;
         gap: 8px;
       }
 
